[gd_scene load_steps=18 format=3 uid="uid://bpevw2r2jiwyn"]

[ext_resource type="FontFile" uid="uid://bsa1fmba5nnkk" path="res://assets/F77MinecraftRegular-0VYv.ttf" id="1_62o6e"]
[ext_resource type="Script" path="res://Checks.gd" id="1_gc1au"]
[ext_resource type="Texture2D" uid="uid://b0sisuwum3gk8" path="res://textures/Checks/unchecked.png" id="2_yguxx"]
[ext_resource type="Texture2D" uid="uid://djvp7shp7cqio" path="res://textures/Checks/AutoFindFile.png" id="3_i1hec"]
[ext_resource type="Texture2D" uid="uid://d3ix1fngnm87t" path="res://textures/Checks/AutoFindFileShine.png" id="4_kbjn8"]
[ext_resource type="Texture2D" uid="uid://dg8rmhkc3r2ow" path="res://textures/Checks/FindFile.png" id="5_x4kec"]
[ext_resource type="Texture2D" uid="uid://blgqnrq35mxfn" path="res://textures/Checks/FindFileShine.png" id="6_y1qc1"]
[ext_resource type="PackedScene" uid="uid://0bouryp2467i" path="res://NextPrevButtons.tscn" id="8_okxhb"]

[sub_resource type="LabelSettings" id="LabelSettings_h0qg1"]
font = ExtResource("1_62o6e")
font_size = 48
shadow_size = 16
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_r3xr5"]
font = ExtResource("1_62o6e")
font_size = 24
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qmgtg"]
font = ExtResource("1_62o6e")
font_size = 32
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rly0y"]
font = ExtResource("1_62o6e")
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_i33rv"]
font = ExtResource("1_62o6e")
font_size = 24
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dyd42"]
font = ExtResource("1_62o6e")
font_color = Color(1, 0, 0, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x57do"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 0.196078)
expand_margin_left = 15.0
expand_margin_top = 15.0
expand_margin_right = 15.0
expand_margin_bottom = 15.0

[sub_resource type="LabelSettings" id="LabelSettings_tilxl"]
font = ExtResource("1_62o6e")
font_size = 24
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_v0yke"]
font = ExtResource("1_62o6e")
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="Checks" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gc1au")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "FOLDERS"
label_settings = SubResource("LabelSettings_h0qg1")
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Please verify that the installer has the correct paths to your Minecraft files. If one of the subfolders (\"saves\", \"mods\", and \"resourcepacks\") is missing from your minecraft folder, please create it."
label_settings = SubResource("LabelSettings_r3xr5")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="MarginContMinecraftFolder" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContMinecraftFolder"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_yguxx")
expand_mode = 5
stretch_mode = 5

[node name="TextureButton_AUTOFIND" type="TextureButton" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("3_i1hec")
texture_pressed = ExtResource("4_kbjn8")
texture_hover = ExtResource("4_kbjn8")
stretch_mode = 5

[node name="TextureButton_FIND" type="TextureButton" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("5_x4kec")
texture_pressed = ExtResource("6_y1qc1")
texture_hover = ExtResource("6_y1qc1")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="Label2" type="Label" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Minecraft Folder"
label_settings = SubResource("LabelSettings_qmgtg")
autowrap_mode = 3

[node name="Label" type="Label" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 2.79
text = "This is the folder that contains your minecraft data such as saves, resourcepacks, mods, etc.
Usually, it's here:
-Windows: %appdata%\\.minecraft
-MacOS: ~/Library/Application Support/minecraft
-Linux: ~/.minecraft"
label_settings = SubResource("LabelSettings_rly0y")
autowrap_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Path :"
label_settings = SubResource("LabelSettings_i33rv")

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
placeholder_text = "path to your minecraft folder"
wrap_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 45

[node name="LogLabel" type="Label" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
label_settings = SubResource("LabelSettings_dyd42")

[node name="MarginContainerMisc" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
theme_override_constants/margin_left = 60

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainerMisc"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x57do")
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainerMisc/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 25

[node name="VBoxCont_MODS" type="VBoxContainer" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_MODS"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_MODS/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_yguxx")
expand_mode = 3
stretch_mode = 5

[node name="TextureButtonMODS" type="TextureButton" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_MODS/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("5_x4kec")
texture_pressed = ExtResource("6_y1qc1")
texture_hover = ExtResource("6_y1qc1")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_MODS/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.49

[node name="Label" type="Label" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_MODS/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Mods Folder"
label_settings = SubResource("LabelSettings_tilxl")

[node name="Label2" type="Label" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_MODS/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Your mods folder contains the mods that will be installed at a later step. If you do not see a mods folder, please create one."
label_settings = SubResource("LabelSettings_v0yke")
autowrap_mode = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_MODS"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_MODS/HBoxContainer2"]
layout_mode = 2
text = "Path:"
label_settings = SubResource("LabelSettings_i33rv")

[node name="TextEdit_MODS" type="TextEdit" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_MODS/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "usually found inside your minecraft folder"

[node name="VBoxCont_SAVES" type="VBoxContainer" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_SAVES"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_SAVES/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_yguxx")
expand_mode = 3
stretch_mode = 5

[node name="TextureButtonSAVES" type="TextureButton" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_SAVES/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("5_x4kec")
texture_pressed = ExtResource("6_y1qc1")
texture_hover = ExtResource("6_y1qc1")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_SAVES/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.49

[node name="Label" type="Label" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_SAVES/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Saves Folder"
label_settings = SubResource("LabelSettings_tilxl")

[node name="Label2" type="Label" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_SAVES/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "The saves folder contains every Minecraft save you have. Drehmal's world file will be installed in this folder."
label_settings = SubResource("LabelSettings_v0yke")
autowrap_mode = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_SAVES"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_SAVES/HBoxContainer2"]
layout_mode = 2
text = "Path:"
label_settings = SubResource("LabelSettings_i33rv")

[node name="TextEdit_SAVES" type="TextEdit" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_SAVES/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "usually found inside your minecraft folder"

[node name="VBoxCont_RES" type="VBoxContainer" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_RES"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_RES/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_yguxx")
expand_mode = 3
stretch_mode = 5

[node name="TextureButtonRES" type="TextureButton" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_RES/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("5_x4kec")
texture_pressed = ExtResource("6_y1qc1")
texture_hover = ExtResource("6_y1qc1")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_RES/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.49

[node name="Label" type="Label" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_RES/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Resource Packs Folder"
label_settings = SubResource("LabelSettings_tilxl")

[node name="Label2" type="Label" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_RES/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "This folder contains all of your resource packs. It will only be used if you decide to install the resource pack globally."
label_settings = SubResource("LabelSettings_v0yke")
autowrap_mode = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_RES"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_RES/HBoxContainer2"]
layout_mode = 2
text = "Path :"
label_settings = SubResource("LabelSettings_i33rv")

[node name="TextEdit_RES" type="TextEdit" parent="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_RES/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "usually found inside your minecraft folder"

[node name="MarginContainer" parent="VBoxContainer" instance=ExtResource("8_okxhb")]
layout_mode = 2
NextStepButton = true
PrevStepButton = true

[node name="NativeFileDialog" type="NativeFileDialog" parent="."]
title = "Open a Directory"
file_mode = 2

[node name="NativeFileDialogMODS" type="NativeFileDialog" parent="."]
title = "Open a Directory"
file_mode = 2

[node name="NativeFileDialogSAVES" type="NativeFileDialog" parent="."]
title = "Open a Directory"
file_mode = 2

[node name="NativeFileDialogRES" type="NativeFileDialog" parent="."]
title = "Open a Directory"
file_mode = 2

[connection signal="pressed" from="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/HBoxContainer/TextureButton_AUTOFIND" to="." method="_on_texture_button_autofind_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/HBoxContainer/TextureButton_FIND" to="." method="_on_texture_button_find_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_MODS/HBoxContainer/TextureButtonMODS" to="." method="_on_texture_button_mods_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_SAVES/HBoxContainer/TextureButtonSAVES" to="." method="_on_texture_button_saves_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainerMisc/ScrollContainer/VBoxContainer/VBoxCont_RES/HBoxContainer/TextureButtonRES" to="." method="_on_texture_button_res_pressed"]
[connection signal="dir_selected" from="NativeFileDialog" to="." method="_on_native_file_dialog_dir_selected"]
[connection signal="dir_selected" from="NativeFileDialogMODS" to="." method="_on_native_file_dialog_mods_dir_selected"]
[connection signal="dir_selected" from="NativeFileDialogSAVES" to="." method="_on_native_file_dialog_saves_dir_selected"]
[connection signal="dir_selected" from="NativeFileDialogRES" to="." method="_on_native_file_dialog_res_dir_selected"]
